fixing image on mobile

--- a/src/Components/Row.css
+++ b/src/Components/Row.css
@@ -25,7 +25,7 @@
   max-height: 25rem;
   margin-right: 10px;
   transition: transform 450ms;
-  object-fit: fill;
+  object-fit: contain;
   border-radius: 10px;
   width: 100%;
 }
